lab1/Test/L1-A-1-58.output
Error Type B at Line 1
Error Type B at Line 10
Error Type B at Line 22
Error Type B at Line 25
Error Type B at Line 25
