lab1/Test/L1-A-1-58.cmm
float * YR_rp6FLp85C5IORez ( int V4luK9WCfXLe [ 1452316019 
  ] [ 161799889 ] [ 1283602906 ] , float f4gdjack72gs 
  ) {
  int hQc71ms76Ewb2 [ 925498853 ] [ 1795621584 ] [ 
    1454144789 ] = ! ! 1908728964 [ - qq = aeOmjvfXlBf 
    ] [ - aTnUbLAX / rqgG2x - IGDnt8isyfU5 == Kz6Z <= 
    ZIIjCSzVlNt7 < J8av5G2DfZBYI7b <= TdEkLR4msuFqJX < 
    xU < ShZjwY9IIIM < wta && NpqHp || KB1aO0IJr92lWJgBDi_ 
    || Ya9Jh ] = zP ( - o4Z * q9J / ltU9rChxgMe / ozc2oiWm 
    * PfaVhgOHRmSlWrUD2 / oLKJSOReFbKF0g38sn int / Xi5AL 
    - pIc1Hzjow0OJ + oxgigi < p7UCpEEAZd6vE ) . tgUeo 
    - apXRJCVuXemvMJJB - 358645654.977527272 [ _uPeWxu4LIxo0m7dT 
    ] . I2sn1 + wkR ( NcComDSsjqoFQt_T ) [ wyCevf6UCCG8Iz1eBw8 
    ] + D19j [ vZHg55JbH4 ] * PRg4Q4i9 * cEiNwKWBENTi 
    - vZ0IM89_ptTWAWQC ( ) / d && uYkEqrw5Jgd6cy5Rr5 ( 
    ) * aXkA6vbQ5aw88B7nCTp <= U != oucuAq < Hap ;
  float IqbKpjlxpk6 = ! CA7q5XZu = - ! hKp8rTH - kuS4ChMCErI_LzGEZbUC 
    , aPgwu3R5CIqQ9A [ 1296462850 ] [ 600053720 ] = ! 
    - EMJ1xoEkInJqrkNsx - atUzTgNxbn7w1YGlx4b - IUx6WHW 
    + L0L + S06jeMhLBzoR4MLvR2l - jOqIA5Bfs0PUpIb_jlIz 
    - rz5sMOkTpeJWO4boR7 + SvhApXS5Qw <= ZpL <= SO40 <= 
    VZr4QsQ3RH6j9u0n float < WTnBe74cS5TITbAW || _2cVaNg2J3cWqz 
    ;
}
|| [ 